--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.6",
+    "@types/node-fetch": "^2.6.2",
     "@types/react-dom": "^18.0.10",
     "assert": "^2.0.0",
     "babel-loader": "^9.1.0",
