--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "buffer": "^6.0.3",
     "concurrently": "^7.6.0",
     "css-loader": "^6.7.3",
+    "cypress": "^12.3.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.29.0",
     "eslint-config-airbnb-base": "^15.0.0",
