--- a/package.json
+++ b/package.json
@@ -61,12 +61,13 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/axios": "^0.14.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
-    "axios": "^1.2.3",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
